# ga4-realtime-api

./: .gitignore  DEPLOYMENT_V2.md  GA4_API_Analytics_Guide.md  README.md  REFACTOR_PLAN.md  database.py  debug_env.py  env-example.txt  ga4_extensions.py  ga_4_api_integration_prd.md  init_db.py  main.py  main_v2.py  main_v2_old.py  migrate_to_v2.py  models.py  oauth.py  pyproject.toml  requirements.txt  test_api.py  test_extended_api.py  test_single_page.py  test_v2_api.py  本地開發說明.md
routers/: analytics.py  auth.py  dashboard.py
services/: auth_service.py  ga4_service.py
